fixed callback error

--- a/Vgg16_2.ipynb
+++ b/Vgg16_2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 21,
    "metadata": {
     "collapsed": true
    },
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 23,
    "metadata": {
     "collapsed": true
    },
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 25,
    "metadata": {
     "collapsed": true
    },
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 26,
    "metadata": {
     "collapsed": true
    },
@@ -148,14 +148,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 input_6\n",
+      "0 input_2\n",
       "1 block1_conv1\n",
       "2 block1_conv2\n",
       "3 block1_pool\n",
@@ -186,14 +186,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 input_6\n",
+      "0 input_2\n",
       "1 block1_conv1\n",
       "2 block1_conv2\n",
       "3 block1_pool\n",
@@ -212,10 +212,10 @@
       "16 block5_conv2\n",
       "17 block5_conv3\n",
       "18 block5_pool\n",
-      "19 flatten_6\n",
-      "20 dense_9\n",
-      "21 dropout_4\n",
-      "22 dense_10\n"
+      "19 flatten_2\n",
+      "20 dense_3\n",
+      "21 dropout_2\n",
+      "22 dense_4\n"
      ]
     }
    ],
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 29,
    "metadata": {
     "collapsed": true
    },
@@ -242,17 +242,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "19 flatten_6\n",
-      "20 dense_9\n",
-      "21 dropout_4\n",
-      "22 dense_10\n"
+      "19 flatten_2\n",
+      "20 dense_3\n",
+      "21 dropout_2\n",
+      "22 dense_4\n"
      ]
     }
    ],
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 31,
    "metadata": {
     "scrolled": true
    },
@@ -278,7 +278,7 @@
       "_________________________________________________________________\n",
       "Layer (type)                 Output Shape              Param #   \n",
       "=================================================================\n",
-      "input_6 (InputLayer)         (None, 224, 224, 3)       0         \n",
+      "input_2 (InputLayer)         (None, 224, 224, 3)       0         \n",
       "_________________________________________________________________\n",
       "block1_conv1 (Conv2D)        (None, 224, 224, 64)      1792      \n",
       "_________________________________________________________________\n",
@@ -316,13 +316,13 @@
       "_________________________________________________________________\n",
       "block5_pool (MaxPooling2D)   (None, 7, 7, 512)         0         \n",
       "_________________________________________________________________\n",
-      "flatten_6 (Flatten)          (None, 25088)             0         \n",
+      "flatten_2 (Flatten)          (None, 25088)             0         \n",
       "_________________________________________________________________\n",
-      "dense_9 (Dense)              (None, 256)               6422784   \n",
+      "dense_3 (Dense)              (None, 256)               6422784   \n",
       "_________________________________________________________________\n",
-      "dropout_4 (Dropout)          (None, 256)               0         \n",
+      "dropout_2 (Dropout)          (None, 256)               0         \n",
       "_________________________________________________________________\n",
-      "dense_10 (Dense)             (None, 3)                 771       \n",
+      "dense_4 (Dense)              (None, 3)                 771       \n",
       "=================================================================\n",
       "Total params: 21,138,243\n",
       "Trainable params: 6,423,555\n",
@@ -337,8 +337,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
-   "metadata": {},
+   "execution_count": 32,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# checkpoint\n",
@@ -349,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 33,
    "metadata": {
     "collapsed": true
    },
@@ -360,19 +362,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
-   "metadata": {},
+   "execution_count": 34,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#histogram_freq=0, write_graph=True, write_grads=False, write_images=False, embeddings_freq=0, embeddings_layer_names=None, embeddings_metadata=None)\n",
-    "tbCallBack = TensorBoard(log_dir='./Graph', histogram_freq=1, write_graph=True, write_images=True, embeddings_freq=1, embeddings_layer_names=embedding_layer_list)\n",
+    "tbCallBack = TensorBoard(log_dir='./Graph', histogram_freq=0, write_graph=True, write_images=True)\n",
     "callbacks_list.append(tbCallBack)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
-   "metadata": {},
+   "execution_count": 35,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#opt = RMSprop(lr=0.1)\n",
@@ -382,43 +388,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/10\n",
-      "368/369 [============================>.] - ETA: 3s - loss: 0.6407 - acc: 0.7423Epoch 00000: val_loss improved from inf to 1.32566, saving model to vgg16-weights-improvement-00-1.33.hdf5\n",
-      "369/369 [==============================] - 1427s - loss: 0.6399 - acc: 0.7425 - val_loss: 1.3257 - val_acc: 0.5093\n",
-      "Epoch 2/10\n",
-      "368/369 [============================>.] - ETA: 3s - loss: 0.5161 - acc: 0.7822Epoch 00001: val_loss did not improve\n",
-      "369/369 [==============================] - 1395s - loss: 0.5157 - acc: 0.7825 - val_loss: 1.4163 - val_acc: 0.5093\n",
-      "Epoch 3/10\n",
-      "368/369 [============================>.] - ETA: 3s - loss: 0.4335 - acc: 0.8247Epoch 00002: val_loss did not improve\n",
-      "369/369 [==============================] - 1358s - loss: 0.4334 - acc: 0.8250 - val_loss: 1.5321 - val_acc: 0.4676\n",
-      "Epoch 4/10\n",
-      "368/369 [============================>.] - ETA: 3s - loss: 0.3618 - acc: 0.8602Epoch 00003: val_loss improved from 1.32566 to 1.19533, saving model to vgg16-weights-improvement-03-1.20.hdf5\n",
-      "369/369 [==============================] - 1352s - loss: 0.3611 - acc: 0.8606 - val_loss: 1.1953 - val_acc: 0.5787\n",
-      "Epoch 5/10\n",
-      "368/369 [============================>.] - ETA: 3s - loss: 0.2825 - acc: 0.9022Epoch 00004: val_loss did not improve\n",
-      "369/369 [==============================] - 1348s - loss: 0.2826 - acc: 0.9023 - val_loss: 1.4761 - val_acc: 0.4954\n",
-      "Epoch 6/10\n",
-      "368/369 [============================>.] - ETA: 3s - loss: 0.2550 - acc: 0.9142Epoch 00005: val_loss did not improve\n",
-      "369/369 [==============================] - 1349s - loss: 0.2549 - acc: 0.9144 - val_loss: 1.2741 - val_acc: 0.5486\n",
-      "Epoch 7/10\n",
-      "368/369 [============================>.] - ETA: 3s - loss: 0.2315 - acc: 0.9245Epoch 00006: val_loss did not improve\n",
-      "369/369 [==============================] - 1353s - loss: 0.2311 - acc: 0.9248 - val_loss: 1.6325 - val_acc: 0.5185\n",
-      "Epoch 8/10\n",
-      "368/369 [============================>.] - ETA: 3s - loss: 0.2163 - acc: 0.9319Epoch 00007: val_loss did not improve\n",
-      "369/369 [==============================] - 1346s - loss: 0.2160 - acc: 0.9320 - val_loss: 1.4544 - val_acc: 0.5116\n",
-      "Epoch 9/10\n",
-      "368/369 [============================>.] - ETA: 3s - loss: 0.1768 - acc: 0.9475Epoch 00008: val_loss did not improve\n",
-      "369/369 [==============================] - 1350s - loss: 0.1768 - acc: 0.9473 - val_loss: 1.5294 - val_acc: 0.5347\n",
-      "Epoch 10/10\n",
-      "368/369 [============================>.] - ETA: 3s - loss: 0.1673 - acc: 0.9485Epoch 00009: val_loss did not improve\n",
-      "369/369 [==============================] - 1353s - loss: 0.1672 - acc: 0.9487 - val_loss: 1.3682 - val_acc: 0.5532\n"
+      "Epoch 1/15\n",
+      "  3/369 [..............................] - ETA: 1419s - loss: 5.8545 - acc: 0.3333"
      ]
     }
    ],
@@ -435,17 +415,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Saved model to disk\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# serialize model to JSON\n",
     "model_json = model.to_json()\n",
