Loaded images into np array

--- a/Vgg16_2.ipynb
+++ b/Vgg16_2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,12 +11,15 @@
     "from keras import optimizers\n",
     "from keras.models import Sequential\n",
     "from keras.layers import Dropout, Flatten, Dense\n",
+    "from keras.layers import Dense, GlobalAveragePooling2D\n",
     "from keras.models import Model\n",
     "from keras.optimizers import SGD, RMSprop, Adam\n",
     "from keras.applications.vgg16 import preprocess_input\n",
     "from keras.callbacks import ModelCheckpoint\n",
     "from keras.callbacks import TensorBoard\n",
-    "from keras import backend as K"
+    "from keras import backend as K\n",
+    "\n",
+    "import numpy as np"
    ]
   },
   {
@@ -32,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -52,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -90,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -102,7 +105,107 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found 5919 images belonging to 3 classes.\n"
+     ]
+    }
+   ],
+   "source": [
+    "test_datagen = ImageDataGenerator(rescale=1. / 255)\n",
+    "itr = train_generator = train_datagen.flow_from_directory(\n",
+    "    train_data_dir,\n",
+    "    target_size=(img_height, img_width),\n",
+    "    batch_size=5919,\n",
+    "    class_mode='categorical')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X, y = itr.next()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(5919, 224, 224, 3)\n",
+      "(5919, 3)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(X.shape)\n",
+    "print(y.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "pre_processed_X = preprocess_input(X)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(5919, 224, 224, 3)\n",
+      "(5919, 3)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(pre_processed_X.shape)\n",
+    "print(y.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "zero_centered_X = pre_processed_X"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "zero_centered_X -= np.mean(zero_centered_X, axis = 0) # zero-center the data (important)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -120,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 18,
    "metadata": {
     "collapsed": true
    },
@@ -128,6 +231,7 @@
    "source": [
     "x = base_model.output\n",
     "x = Flatten()(x)\n",
+    "#x = GlobalAveragePooling2D()(x)\n",
     "x = Dense(256, activation='relu', kernel_initializer='glorot_uniform')(x)\n",
     "x = Dropout(0.5)(x)\n",
     "predictions = Dense(nb_classes, activation='softmax', kernel_initializer='glorot_uniform')(x)"
@@ -135,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 19,
    "metadata": {
     "collapsed": true
    },
@@ -148,14 +252,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 input_2\n",
+      "0 input_1\n",
       "1 block1_conv1\n",
       "2 block1_conv2\n",
       "3 block1_pool\n",
@@ -186,14 +290,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 input_2\n",
+      "0 input_1\n",
       "1 block1_conv1\n",
       "2 block1_conv2\n",
       "3 block1_pool\n",
@@ -212,10 +316,10 @@
       "16 block5_conv2\n",
       "17 block5_conv3\n",
       "18 block5_pool\n",
-      "19 flatten_2\n",
-      "20 dense_3\n",
-      "21 dropout_2\n",
-      "22 dense_4\n"
+      "19 flatten_1\n",
+      "20 dense_1\n",
+      "21 dropout_1\n",
+      "22 dense_2\n"
      ]
     }
    ],
@@ -228,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 22,
    "metadata": {
     "collapsed": true
    },
@@ -242,17 +346,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "19 flatten_2\n",
-      "20 dense_3\n",
-      "21 dropout_2\n",
-      "22 dense_4\n"
+      "19 flatten_1\n",
+      "20 dense_1\n",
+      "21 dropout_1\n",
+      "22 dense_2\n"
      ]
     }
    ],
@@ -266,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 24,
    "metadata": {
     "scrolled": true
    },
@@ -278,7 +382,7 @@
       "_________________________________________________________________\n",
       "Layer (type)                 Output Shape              Param #   \n",
       "=================================================================\n",
-      "input_2 (InputLayer)         (None, 224, 224, 3)       0         \n",
+      "input_1 (InputLayer)         (None, 224, 224, 3)       0         \n",
       "_________________________________________________________________\n",
       "block1_conv1 (Conv2D)        (None, 224, 224, 64)      1792      \n",
       "_________________________________________________________________\n",
@@ -316,13 +420,13 @@
       "_________________________________________________________________\n",
       "block5_pool (MaxPooling2D)   (None, 7, 7, 512)         0         \n",
       "_________________________________________________________________\n",
-      "flatten_2 (Flatten)          (None, 25088)             0         \n",
+      "flatten_1 (Flatten)          (None, 25088)             0         \n",
       "_________________________________________________________________\n",
-      "dense_3 (Dense)              (None, 256)               6422784   \n",
+      "dense_1 (Dense)              (None, 256)               6422784   \n",
       "_________________________________________________________________\n",
-      "dropout_2 (Dropout)          (None, 256)               0         \n",
+      "dropout_1 (Dropout)          (None, 256)               0         \n",
       "_________________________________________________________________\n",
-      "dense_4 (Dense)              (None, 3)                 771       \n",
+      "dense_2 (Dense)              (None, 3)                 771       \n",
       "=================================================================\n",
       "Total params: 21,138,243\n",
       "Trainable params: 6,423,555\n",
@@ -337,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 25,
    "metadata": {
     "collapsed": true
    },
@@ -351,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 26,
    "metadata": {
     "collapsed": true
    },
@@ -362,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 27,
    "metadata": {
     "collapsed": true
    },
@@ -375,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 28,
    "metadata": {
     "collapsed": true
    },
@@ -383,12 +487,87 @@
    "source": [
     "#opt = RMSprop(lr=0.1)\n",
     "opt = Adam(lr=0.001, beta_1=0.9, beta_2=0.999, epsilon=1e-08, decay=0.0)\n",
+    "#SGD(lr=1e-4, momentum=0.9)\n",
+    "#opt=SGD(lr=0.01, momentum=0.9, nesterov=True)\n",
     "model.compile(optimizer=opt, loss='categorical_crossentropy', metrics=['accuracy'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Goal: < 0.96188 val_loss"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train on 4143 samples, validate on 1776 samples\n",
+      "Epoch 1/10\n",
+      "4128/4143 [============================>.] - ETA: 0s - loss: 1.0617 - acc: 0.4319Epoch 00000: val_loss improved from inf to 1.03076, saving model to vgg16-weights-improvement-00-1.03.hdf5\n",
+      "4143/4143 [==============================] - 73s - loss: 1.0619 - acc: 0.4316 - val_loss: 1.0308 - val_acc: 0.4673\n",
+      "Epoch 2/10\n",
+      "4128/4143 [============================>.] - ETA: 0s - loss: 1.0330 - acc: 0.4612Epoch 00001: val_loss improved from 1.03076 to 0.99927, saving model to vgg16-weights-improvement-01-1.00.hdf5\n",
+      "4143/4143 [==============================] - 71s - loss: 1.0330 - acc: 0.4617 - val_loss: 0.9993 - val_acc: 0.5118\n",
+      "Epoch 3/10\n",
+      "4128/4143 [============================>.] - ETA: 0s - loss: 1.0117 - acc: 0.4763Epoch 00002: val_loss did not improve\n",
+      "4143/4143 [==============================] - 71s - loss: 1.0115 - acc: 0.4762 - val_loss: 1.0178 - val_acc: 0.4899\n",
+      "Epoch 4/10\n",
+      "4128/4143 [============================>.] - ETA: 0s - loss: 0.9977 - acc: 0.4809Epoch 00003: val_loss did not improve\n",
+      "4143/4143 [==============================] - 71s - loss: 0.9979 - acc: 0.4806 - val_loss: 1.0172 - val_acc: 0.4983\n",
+      "Epoch 5/10\n",
+      "4128/4143 [============================>.] - ETA: 0s - loss: 0.9912 - acc: 0.4872- Epoch 00004: val_loss did not improve\n",
+      "4143/4143 [==============================] - 71s - loss: 0.9904 - acc: 0.4878 - val_loss: 1.0192 - val_acc: 0.4831\n",
+      "Epoch 6/10\n",
+      "4128/4143 [============================>.] - ETA: 0s - loss: 1.0010 - acc: 0.4918- ETA: 1s - loss: 1.0020 - acc:Epoch 00005: val_loss improved from 0.99927 to 0.98727, saving model to vgg16-weights-improvement-05-0.99.hdf5\n",
+      "4143/4143 [==============================] - 71s - loss: 1.0008 - acc: 0.4914 - val_loss: 0.9873 - val_acc: 0.4961\n",
+      "Epoch 7/10\n",
+      "4128/4143 [============================>.] - ETA: 0s - loss: 0.9707 - acc: 0.4983Epoch 00006: val_loss improved from 0.98727 to 0.97808, saving model to vgg16-weights-improvement-06-0.98.hdf5\n",
+      "4143/4143 [==============================] - 71s - loss: 0.9713 - acc: 0.4982 - val_loss: 0.9781 - val_acc: 0.5113\n",
+      "Epoch 8/10\n",
+      "4128/4143 [============================>.] - ETA: 0s - loss: 0.9414 - acc: 0.5150Epoch 00007: val_loss did not improve\n",
+      "4143/4143 [==============================] - 71s - loss: 0.9419 - acc: 0.5146 - val_loss: 1.0132 - val_acc: 0.4679\n",
+      "Epoch 9/10\n",
+      "4128/4143 [============================>.] - ETA: 0s - loss: 0.9233 - acc: 0.5157Epoch 00008: val_loss did not improve\n",
+      "4143/4143 [==============================] - 71s - loss: 0.9235 - acc: 0.5158 - val_loss: 1.0012 - val_acc: 0.4961\n",
+      "Epoch 10/10\n",
+      "4128/4143 [============================>.] - ETA: 0s - loss: 0.9088 - acc: 0.5271Epoch 00009: val_loss did not improve\n",
+      "4143/4143 [==============================] - 71s - loss: 0.9093 - acc: 0.5264 - val_loss: 1.0081 - val_acc: 0.4825\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<keras.callbacks.History at 0x278fa93ccc0>"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "history = model.fit(zero_centered_X, y, batch_size=16, epochs=20, callbacks=callbacks_list, validation_split=0.3, shuffle=True, initial_epoch=10)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "metadata": {
     "scrolled": true
    },
@@ -398,7 +577,20 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/15\n",
-      "  3/369 [..............................] - ETA: 1419s - loss: 5.8545 - acc: 0.3333"
+      "  8/739 [..............................] - ETA: 1449s - loss: 3.0948 - acc: 0.4531"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-17-7a245417d836>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      6\u001b[0m     \u001b[0mvalidation_data\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mvalidation_generator\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      7\u001b[0m     \u001b[0mvalidation_steps\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mnb_validation_samples\u001b[0m \u001b[1;33m//\u001b[0m \u001b[0mbatch_size\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 8\u001b[1;33m     callbacks=callbacks_list)\n\u001b[0m",
+      "\u001b[1;32mC:\\Users\\Flo\\Anaconda3\\envs\\tensorflow\\lib\\site-packages\\keras\\legacy\\interfaces.py\u001b[0m in \u001b[0;36mwrapper\u001b[1;34m(*args, **kwargs)\u001b[0m\n\u001b[0;32m     86\u001b[0m                 warnings.warn('Update your `' + object_name +\n\u001b[0;32m     87\u001b[0m                               '` call to the Keras 2 API: ' + signature, stacklevel=2)\n\u001b[1;32m---> 88\u001b[1;33m             \u001b[1;32mreturn\u001b[0m \u001b[0mfunc\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m*\u001b[0m\u001b[0margs\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     89\u001b[0m         \u001b[0mwrapper\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_legacy_support_signature\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0minspect\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mgetargspec\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfunc\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     90\u001b[0m         \u001b[1;32mreturn\u001b[0m \u001b[0mwrapper\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mC:\\Users\\Flo\\Anaconda3\\envs\\tensorflow\\lib\\site-packages\\keras\\engine\\training.py\u001b[0m in \u001b[0;36mfit_generator\u001b[1;34m(self, generator, steps_per_epoch, epochs, verbose, callbacks, validation_data, validation_steps, class_weight, max_q_size, workers, pickle_safe, initial_epoch)\u001b[0m\n\u001b[0;32m   1857\u001b[0m                             \u001b[1;32mbreak\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1858\u001b[0m                         \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 1859\u001b[1;33m                             \u001b[0mtime\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msleep\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mwait_time\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   1860\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1861\u001b[0m                     \u001b[1;32mif\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[0mhasattr\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mgenerator_output\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'__len__'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
@@ -416,7 +608,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# serialize model to JSON\n",
