added further regularization

--- a/Vgg16_2.ipynb
+++ b/Vgg16_2.ipynb
@@ -2,13 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
     "from keras import applications\n",
     "from keras.preprocessing.image import ImageDataGenerator\n",
     "from keras import optimizers\n",
+    "from keras import regularizers\n",
     "from keras.models import Sequential\n",
     "from keras.layers import Dropout, Flatten, Dense\n",
     "from keras.layers import Dense, GlobalAveragePooling2D\n",
@@ -90,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,9 +100,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 74,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(6363, 224, 224, 3)\n",
+      "(6363, 3)\n"
+     ]
+    }
+   ],
    "source": [
     "print(X.shape)\n",
     "print(y.shape)"
@@ -109,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 75,
    "metadata": {
     "collapsed": true
    },
@@ -120,9 +130,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 76,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model loaded.\n"
+     ]
+    }
+   ],
    "source": [
     "base_model = applications.VGG16(weights='imagenet', include_top=False, input_shape=(img_width, img_height, 3))\n",
     "print('Model loaded.')"
@@ -130,10 +148,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 81,
+   "metadata": {},
    "outputs": [],
    "source": [
     "x = base_model.output\n",
@@ -145,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 82,
    "metadata": {
     "collapsed": true
    },
@@ -158,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 83,
    "metadata": {
     "collapsed": true
    },
@@ -171,9 +187,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 84,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 input_2\n",
+      "1 block1_conv1\n",
+      "2 block1_conv2\n",
+      "3 block1_pool\n",
+      "4 block2_conv1\n",
+      "5 block2_conv2\n",
+      "6 block2_pool\n",
+      "7 block3_conv1\n",
+      "8 block3_conv2\n",
+      "9 block3_conv3\n",
+      "10 block3_pool\n",
+      "11 block4_conv1\n",
+      "12 block4_conv2\n",
+      "13 block4_conv3\n",
+      "14 block4_pool\n",
+      "15 block5_conv1\n",
+      "16 block5_conv2\n",
+      "17 block5_conv3\n",
+      "18 block5_pool\n",
+      "19 flatten_4\n",
+      "20 dense_3\n",
+      "21 dropout_2\n",
+      "22 dense_4\n"
+     ]
+    }
+   ],
    "source": [
     "# let's visualize layer names and layer indices to see how many layers\n",
     "# we should freeze:\n",
@@ -182,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 85,
    "metadata": {
     "collapsed": true
    },
@@ -196,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 86,
    "metadata": {
     "collapsed": true
    },
@@ -210,9 +256,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 87,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "19 flatten_4\n",
+      "20 dense_3\n",
+      "21 dropout_2\n",
+      "22 dense_4\n"
+     ]
+    }
+   ],
    "source": [
     "# let's visualize layer names and layer indices to see how many layers\n",
     "# we should freeze:\n",
@@ -221,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 88,
    "metadata": {
     "collapsed": true
    },
@@ -235,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 89,
    "metadata": {
     "collapsed": true
    },
