--- a/Vgg16_2.ipynb
+++ b/Vgg16_2.ipynb
@@ -604,12 +604,29 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "opt = RMSprop(lr=0.00001, rho=0.7)\n",
+    "#opt = Adam(lr=0.001, beta_1=0.9, beta_2=0.999, epsilon=1e-08 )# decay=0.0\n",
+    "#SGD(lr=1e-4, momentum=0.9)\n",
+    "#opt=SGD(lr=0.01, momentum=0.9, nesterov=True, decay=0.5)\n",
+    "model.compile(optimizer=opt, loss='categorical_crossentropy', metrics=['accuracy'])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "history2 = model.fit(pre_processed_X, y, batch_size=16, epochs=10, callbacks=callbacks_list, validation_split=0.3, shuffle=True, initial_epoch=6)"
+   ]
   }
  ],
  "metadata": {
