--- a/Xception.ipynb
+++ b/Xception.ipynb
@@ -1053,22 +1053,132 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "Error when checking input: expected input_3 to have shape (None, 299, 299, 3) but got array with shape (148, 32, 32, 3)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m-------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                        Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-108-70bff6a1ee5d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      5\u001b[0m         \u001b[0mvalidation_data\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_val\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mY_val\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m         \u001b[0mvalidation_steps\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mnb_val_samples\u001b[0m \u001b[0;34m//\u001b[0m \u001b[0mbatch_size\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m         callbacks=callbacks_list)\n\u001b[0m",
-      "\u001b[0;32m/home/paperspace/anaconda2/envs/tensorflow/lib/python2.7/site-packages/keras/legacy/interfaces.pyc\u001b[0m in \u001b[0;36mwrapper\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m     86\u001b[0m                 warnings.warn('Update your `' + object_name +\n\u001b[1;32m     87\u001b[0m                               '` call to the Keras 2 API: ' + signature, stacklevel=2)\n\u001b[0;32m---> 88\u001b[0;31m             \u001b[0;32mreturn\u001b[0m \u001b[0mfunc\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     89\u001b[0m         \u001b[0mwrapper\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_legacy_support_signature\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0minspect\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgetargspec\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfunc\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     90\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mwrapper\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/home/paperspace/anaconda2/envs/tensorflow/lib/python2.7/site-packages/keras/engine/training.pyc\u001b[0m in \u001b[0;36mfit_generator\u001b[0;34m(self, generator, steps_per_epoch, epochs, verbose, callbacks, validation_data, validation_steps, class_weight, max_q_size, workers, pickle_safe, initial_epoch)\u001b[0m\n\u001b[1;32m   1836\u001b[0m                                  str(validation_data))\n\u001b[1;32m   1837\u001b[0m             val_x, val_y, val_sample_weights = self._standardize_user_data(\n\u001b[0;32m-> 1838\u001b[0;31m                 val_x, val_y, val_sample_weight)\n\u001b[0m\u001b[1;32m   1839\u001b[0m             \u001b[0;32mfor\u001b[0m \u001b[0mcbk\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mcallbacks\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1840\u001b[0m                 \u001b[0mcbk\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvalidation_data\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mval_x\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mval_y\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mval_sample_weights\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/home/paperspace/anaconda2/envs/tensorflow/lib/python2.7/site-packages/keras/engine/training.pyc\u001b[0m in \u001b[0;36m_standardize_user_data\u001b[0;34m(self, x, y, sample_weight, class_weight, check_batch_axis, batch_size)\u001b[0m\n\u001b[1;32m   1303\u001b[0m                                     \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_feed_input_shapes\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1304\u001b[0m                                     \u001b[0mcheck_batch_axis\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mFalse\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1305\u001b[0;31m                                     exception_prefix='input')\n\u001b[0m\u001b[1;32m   1306\u001b[0m         y = _standardize_input_data(y, self._feed_output_names,\n\u001b[1;32m   1307\u001b[0m                                     \u001b[0moutput_shapes\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/home/paperspace/anaconda2/envs/tensorflow/lib/python2.7/site-packages/keras/engine/training.pyc\u001b[0m in \u001b[0;36m_standardize_input_data\u001b[0;34m(data, names, shapes, check_batch_axis, exception_prefix)\u001b[0m\n\u001b[1;32m    137\u001b[0m                             \u001b[0;34m' to have shape '\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mshapes\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m+\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    138\u001b[0m                             \u001b[0;34m' but got array with shape '\u001b[0m \u001b[0;34m+\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 139\u001b[0;31m                             str(array.shape))\n\u001b[0m\u001b[1;32m    140\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0marrays\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    141\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mValueError\u001b[0m: Error when checking input: expected input_3 to have shape (None, 299, 299, 3) but got array with shape (148, 32, 32, 3)"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/120\n",
+      "81/83 [============================>.] - ETA: 0s - loss: 2.6587 - categorical_accuracy: 0.4771Epoch 00000: val_loss improved from inf to 1.47230, saving model to Xception-top-improvement_learning_rate_decy_0.01-00-1.47230166358.hdf5\n",
+      "83/83 [==============================] - 6s - loss: 2.6412 - categorical_accuracy: 0.4765 - val_loss: 1.4723 - val_categorical_accuracy: 0.3514\n",
+      "Epoch 2/120\n",
+      "81/83 [============================>.] - ETA: 0s - loss: 1.7193 - categorical_accuracy: 0.4853Epoch 00001: val_loss improved from 1.47230 to 0.99398, saving model to Xception-top-improvement_learning_rate_decy_0.01-01-0.993979115744.hdf5\n",
+      "83/83 [==============================] - 3s - loss: 1.6998 - categorical_accuracy: 0.4905 - val_loss: 0.9940 - val_categorical_accuracy: 0.5541\n",
+      "Epoch 3/120\n",
+      "81/83 [============================>.] - ETA: 0s - loss: 1.0979 - categorical_accuracy: 0.5079Epoch 00002: val_loss did not improve\n",
+      "83/83 [==============================] - 2s - loss: 1.1015 - categorical_accuracy: 0.5047 - val_loss: 1.0022 - val_categorical_accuracy: 0.5541\n",
+      "Epoch 4/120\n",
+      "81/83 [============================>.] - ETA: 0s - loss: 1.0550 - categorical_accuracy: 0.5130Epoch 00003: val_loss did not improve\n",
+      "83/83 [==============================] - 2s - loss: 1.0559 - categorical_accuracy: 0.5127 - val_loss: 0.9993 - val_categorical_accuracy: 0.5541\n",
+      "Epoch 5/120\n",
+      "81/83 [============================>.] - ETA: 0s - loss: 1.0446 - categorical_accuracy: 0.5166Epoch 00004: val_loss did not improve\n",
+      "83/83 [==============================] - 2s - loss: 1.0428 - categorical_accuracy: 0.5185 - val_loss: 0.9984 - val_categorical_accuracy: 0.5541\n",
+      "Epoch 6/120\n",
+      "81/83 [============================>.] - ETA: 0s - loss: 1.0318 - categorical_accuracy: 0.5183 ETA: 0s - loss: 1.0360 - categorical_accuEpoch 00005: val_loss did not improve\n",
+      "83/83 [==============================] - 2s - loss: 1.0323 - categorical_accuracy: 0.5186 - val_loss: 1.0065 - val_categorical_accuracy: 0.5541\n",
+      "Epoch 7/120\n",
+      "81/83 [============================>.] - ETA: 0s - loss: 1.0437 - categorical_accuracy: 0.5207Epoch 00006: val_loss improved from 0.99398 to 0.99334, saving model to Xception-top-improvement_learning_rate_decy_0.01-06-0.993341072186.hdf5\n",
+      "83/83 [==============================] - 3s - loss: 1.0468 - categorical_accuracy: 0.5194 - val_loss: 0.9933 - val_categorical_accuracy: 0.5541\n",
+      "Epoch 8/120\n",
+      "81/83 [============================>.] - ETA: 0s - loss: 1.0231 - categorical_accuracy: 0.5202Epoch 00007: val_loss improved from 0.99334 to 0.98947, saving model to Xception-top-improvement_learning_rate_decy_0.01-07-0.989474592982.hdf5\n",
+      "83/83 [==============================] - 3s - loss: 1.0250 - categorical_accuracy: 0.5175 - val_loss: 0.9895 - val_categorical_accuracy: 0.5541\n",
+      "Epoch 9/120\n",
+      "81/83 [============================>.] - ETA: 0s - loss: 1.0095 - categorical_accuracy: 0.5340Epoch 00008: val_loss did not improve\n",
+      "83/83 [==============================] - 2s - loss: 1.0124 - categorical_accuracy: 0.5321 - val_loss: 0.9925 - val_categorical_accuracy: 0.5541\n",
+      "Epoch 10/120\n",
+      "81/83 [============================>.] - ETA: 0s - loss: 1.0269 - categorical_accuracy: 0.5141Epoch 00009: val_loss did not improve\n",
+      "83/83 [==============================] - 2s - loss: 1.0263 - categorical_accuracy: 0.5153 - val_loss: 0.9918 - val_categorical_accuracy: 0.5541\n",
+      "Epoch 11/120\n",
+      "81/83 [============================>.] - ETA: 0s - loss: 1.0284 - categorical_accuracy: 0.5161Epoch 00010: val_loss improved from 0.98947 to 0.98663, saving model to Xception-top-improvement_learning_rate_decy_0.01-10-0.986634248012.hdf5\n",
+      "83/83 [==============================] - 3s - loss: 1.0277 - categorical_accuracy: 0.5173 - val_loss: 0.9866 - val_categorical_accuracy: 0.5541\n",
+      "Epoch 12/120\n",
+      "81/83 [============================>.] - ETA: 0s - loss: 1.0155 - categorical_accuracy: 0.5197Epoch 00011: val_loss did not improve\n",
+      "83/83 [==============================] - 2s - loss: 1.0143 - categorical_accuracy: 0.5214 - val_loss: 0.9877 - val_categorical_accuracy: 0.5541\n",
+      "Epoch 13/120\n",
+      "81/83 [============================>.] - ETA: 0s - loss: 1.0137 - categorical_accuracy: 0.5228Epoch 00012: val_loss did not improve\n",
+      "83/83 [==============================] - 2s - loss: 1.0148 - categorical_accuracy: 0.5219 - val_loss: 0.9963 - val_categorical_accuracy: 0.5541\n",
+      "Epoch 14/120\n",
+      "81/83 [============================>.] - ETA: 0s - loss: 1.0163 - categorical_accuracy: 0.5161Epoch 00013: val_loss did not improve\n",
+      "83/83 [==============================] - 2s - loss: 1.0171 - categorical_accuracy: 0.5157 - val_loss: 0.9876 - val_categorical_accuracy: 0.5541\n",
+      "Epoch 15/120\n",
+      "81/83 [============================>.] - ETA: 0s - loss: 1.0099 - categorical_accuracy: 0.5263Epoch 00014: val_loss improved from 0.98663 to 0.98535, saving model to Xception-top-improvement_learning_rate_decy_0.01-14-0.985346645922.hdf5\n",
+      "83/83 [==============================] - 3s - loss: 1.0109 - categorical_accuracy: 0.5257 - val_loss: 0.9853 - val_categorical_accuracy: 0.5541\n",
+      "Epoch 16/120\n",
+      "81/83 [============================>.] - ETA: 0s - loss: 1.0142 - categorical_accuracy: 0.5225Epoch 00015: val_loss improved from 0.98535 to 0.98243, saving model to Xception-top-improvement_learning_rate_decy_0.01-15-0.98243128609.hdf5\n",
+      "83/83 [==============================] - 3s - loss: 1.0156 - categorical_accuracy: 0.5223 - val_loss: 0.9824 - val_categorical_accuracy: 0.5541\n",
+      "Epoch 17/120\n",
+      "81/83 [============================>.] - ETA: 0s - loss: 1.0172 - categorical_accuracy: 0.5142Epoch 00016: val_loss did not improve\n",
+      "83/83 [==============================] - 2s - loss: 1.0177 - categorical_accuracy: 0.5131 - val_loss: 0.9863 - val_categorical_accuracy: 0.5541\n",
+      "Epoch 18/120\n",
+      "81/83 [============================>.] - ETA: 0s - loss: 1.0041 - categorical_accuracy: 0.5359Epoch 00017: val_loss improved from 0.98243 to 0.98121, saving model to Xception-top-improvement_learning_rate_decy_0.01-17-0.981213746844.hdf5\n",
+      "83/83 [==============================] - 3s - loss: 1.0057 - categorical_accuracy: 0.5343 - val_loss: 0.9812 - val_categorical_accuracy: 0.5541\n",
+      "Epoch 19/120\n",
+      "81/83 [============================>.] - ETA: 0s - loss: 1.0121 - categorical_accuracy: 0.5238Epoch 00018: val_loss did not improve\n",
+      "83/83 [==============================] - 2s - loss: 1.0146 - categorical_accuracy: 0.5214 - val_loss: 0.9831 - val_categorical_accuracy: 0.5541\n",
+      "Epoch 20/120\n",
+      "81/83 [============================>.] - ETA: 0s - loss: 1.0118 - categorical_accuracy: 0.5179Epoch 00019: val_loss did not improve\n",
+      "83/83 [==============================] - 2s - loss: 1.0109 - categorical_accuracy: 0.5194 - val_loss: 0.9947 - val_categorical_accuracy: 0.5541\n",
+      "Epoch 21/120\n",
+      "81/83 [============================>.] - ETA: 0s - loss: 1.0077 - categorical_accuracy: 0.5218Epoch 00020: val_loss did not improve\n",
+      "83/83 [==============================] - 2s - loss: 1.0054 - categorical_accuracy: 0.5250 - val_loss: 0.9865 - val_categorical_accuracy: 0.5541\n",
+      "Epoch 22/120\n",
+      "81/83 [============================>.] - ETA: 0s - loss: 1.0016 - categorical_accuracy: 0.5259Epoch 00021: val_loss did not improve\n",
+      "83/83 [==============================] - 2s - loss: 1.0006 - categorical_accuracy: 0.5268 - val_loss: 0.9919 - val_categorical_accuracy: 0.5541\n",
+      "Epoch 23/120\n",
+      "81/83 [============================>.] - ETA: 0s - loss: 1.0162 - categorical_accuracy: 0.5191Epoch 00022: val_loss did not improve\n",
+      "83/83 [==============================] - 2s - loss: 1.0173 - categorical_accuracy: 0.5187 - val_loss: 0.9980 - val_categorical_accuracy: 0.5541\n",
+      "Epoch 24/120\n",
+      "81/83 [============================>.] - ETA: 0s - loss: 0.9971 - categorical_accuracy: 0.5275Epoch 00023: val_loss did not improve\n",
+      "83/83 [==============================] - 2s - loss: 0.9993 - categorical_accuracy: 0.5264 - val_loss: 0.9964 - val_categorical_accuracy: 0.5541\n",
+      "Epoch 25/120\n",
+      "81/83 [============================>.] - ETA: 0s - loss: 1.0044 - categorical_accuracy: 0.5274Epoch 00024: val_loss did not improve\n",
+      "83/83 [==============================] - 2s - loss: 1.0061 - categorical_accuracy: 0.5256 - val_loss: 0.9985 - val_categorical_accuracy: 0.5541\n",
+      "Epoch 26/120\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "81/83 [============================>.] - ETA: 0s - loss: 1.0123 - categorical_accuracy: 0.5257 ETA: 1s -Epoch 00025: val_loss did not improve\n",
+      "83/83 [==============================] - 2s - loss: 1.0111 - categorical_accuracy: 0.5266 - val_loss: 0.9860 - val_categorical_accuracy: 0.5541\n",
+      "Epoch 27/120\n",
+      "81/83 [============================>.] - ETA: 0s - loss: 1.0095 - categorical_accuracy: 0.5140Epoch 00026: val_loss did not improve\n",
+      "83/83 [==============================] - 2s - loss: 1.0099 - categorical_accuracy: 0.5132 - val_loss: 1.0034 - val_categorical_accuracy: 0.5541\n",
+      "Epoch 28/120\n",
+      "81/83 [============================>.] - ETA: 0s - loss: 0.9957 - categorical_accuracy: 0.5375Epoch 00027: val_loss did not improve\n",
+      "83/83 [==============================] - 2s - loss: 0.9975 - categorical_accuracy: 0.5343 - val_loss: 0.9905 - val_categorical_accuracy: 0.5541\n",
+      "Epoch 29/120\n",
+      "81/83 [============================>.] - ETA: 0s - loss: 1.0082 - categorical_accuracy: 0.5242Epoch 00028: val_loss did not improve\n",
+      "83/83 [==============================] - 2s - loss: 1.0077 - categorical_accuracy: 0.5244 - val_loss: 0.9879 - val_categorical_accuracy: 0.5541\n",
+      "Epoch 30/120\n",
+      "81/83 [============================>.] - ETA: 0s - loss: 1.0068 - categorical_accuracy: 0.5143Epoch 00029: val_loss did not improve\n",
+      "83/83 [==============================] - 2s - loss: 1.0054 - categorical_accuracy: 0.5151 - val_loss: 0.9889 - val_categorical_accuracy: 0.5541\n",
+      "Epoch 31/120\n",
+      "81/83 [============================>.] - ETA: 0s - loss: 1.0120 - categorical_accuracy: 0.5242Epoch 00030: val_loss did not improve\n",
+      "83/83 [==============================] - 2s - loss: 1.0144 - categorical_accuracy: 0.5214 - val_loss: 0.9960 - val_categorical_accuracy: 0.5541\n",
+      "Epoch 32/120\n",
+      "81/83 [============================>.] - ETA: 0s - loss: 1.0049 - categorical_accuracy: 0.5202Epoch 00031: val_loss did not improve\n",
+      "83/83 [==============================] - 2s - loss: 1.0041 - categorical_accuracy: 0.5209 - val_loss: 1.0024 - val_categorical_accuracy: 0.5541\n",
+      "Epoch 33/120\n",
+      "81/83 [============================>.] - ETA: 0s - loss: 1.0044 - categorical_accuracy: 0.5244Epoch 00032: val_loss did not improve\n",
+      "83/83 [==============================] - 2s - loss: 1.0055 - categorical_accuracy: 0.5238 - val_loss: 1.0194 - val_categorical_accuracy: 0.5541\n",
+      "Epoch 34/120\n",
+      "81/83 [============================>.] - ETA: 0s - loss: 1.0043 - categorical_accuracy: 0.5231Epoch 00033: val_loss did not improve\n",
+      "83/83 [==============================] - 2s - loss: 1.0043 - categorical_accuracy: 0.5236 - val_loss: 0.9988 - val_categorical_accuracy: 0.5541\n",
+      "Epoch 35/120\n",
+      "81/83 [============================>.] - ETA: 0s - loss: 0.9994 - categorical_accuracy: 0.5250Epoch 00034: val_loss did not improve\n",
+      "83/83 [==============================] - 2s - loss: 1.0033 - categorical_accuracy: 0.5225 - val_loss: 1.0076 - val_categorical_accuracy: 0.5541\n",
+      "Epoch 36/120\n",
+      "81/83 [============================>.] - ETA: 0s - loss: 1.0041 - categorical_accuracy: 0.5198Epoch 00035: val_loss did not improve\n",
+      "83/83 [==============================] - 2s - loss: 1.0050 - categorical_accuracy: 0.5193 - val_loss: 1.0044 - val_categorical_accuracy: 0.5541\n",
+      "Epoch 37/120\n",
+      "81/83 [============================>.] - ETA: 0s - loss: 1.0048 - categorical_accuracy: 0.5214Epoch 00036: val_loss did not improve\n",
+      "83/83 [==============================] - 2s - loss: 1.0050 - categorical_accuracy: 0.5220 - val_loss: 0.9944 - val_categorical_accuracy: 0.5541\n",
+      "Epoch 38/120\n",
+      "81/83 [============================>.] - ETA: 0s - loss: 1.0087 - categorical_accuracy: 0.5234"
      ]
     }
    ],
@@ -1084,17 +1194,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Saved model to disk\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# serialize model to JSON\n",
     "model_json = model.to_json()\n",
