--- a/Xception.ipynb
+++ b/Xception.ipynb
@@ -1373,13 +1373,7 @@
       "conv2d_75 (Conv2D)               (None, None, None, 19 258048      activation_74[0][0]              \n",
       "____________________________________________________________________________________________________\n",
       "batch_normalization_71 (BatchNor (None, None, None, 19 576         conv2d_71[0][0]                  \n",
-      "____________________________________________________________________________________________________\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "____________________________________________________________________________________________________\n",
       "batch_normalization_75 (BatchNor (None, None, None, 19 576         conv2d_75[0][0]                  \n",
       "____________________________________________________________________________________________________\n",
       "activation_71 (Activation)       (None, None, None, 19 0           batch_normalization_71[0][0]     \n",
@@ -1607,7 +1601,9 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#rescale=1./255, removed because of pre_process\n",
@@ -1621,7 +1617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -1657,7 +1653,8 @@
     "        epochs=nb_epoch,\n",
     "        validation_data=(X_val, Y_val),\n",
     "        validation_steps=nb_val_samples // batch_size,\n",
-    "        callbacks=callbacks_list)"
+    "        callbacks=callbacks_list)\n",
+    "print('Finished!')"
    ]
   },
   {
@@ -1696,7 +1693,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "test = glob.glob('data/test/**/*.jpg')\n",
@@ -1711,7 +1710,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "print(test_data.shape)"
@@ -1731,7 +1732,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "print(test_data_channels_last.shape)"
@@ -1740,7 +1743,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Calculate class posteriors probabilities\n",
@@ -1751,7 +1756,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "print(y_probabilities[:5])"
@@ -1773,7 +1780,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "%ls"
@@ -1782,7 +1791,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   },
